--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -238,6 +238,54 @@ title = {Algorithms for Hyper-Parameter Optimization}
 	url = {https://keras-team.github.io/keras-tuner}
 }
 
+@article{delgado2019approximate,
+  title={Approximate entropy and sample entropy: A comprehensive tutorial},
+  author={Delgado-Bonal, Alfonso and Marshak, Alexander},
+  journal={Entropy},
+  volume={21},
+  number={6},
+  pages={541},
+  year={2019},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@misc{CUDA,
+	title = {{CUDA Zone}},
+	journal = {NVIDIA Developer},
+	year = {2021},
+	month = {Apr},
+	note = {[Online; accessed 16. Apr. 2021]},
+	url = {https://developer.nvidia.com/cuda-zone}
+}
+
+@misc{CuPy,
+	title = {{CuPy}},
+	journal = {CuPy},
+	year = {2021},
+	month = {Apr},
+	note = {[Online; accessed 16. Apr. 2021]},
+	url = {https://cupy.dev}
+}
+
+@misc{Geron2018Feb,
+	author = {G{\ifmmode\acute{e}\else\'{e}\fi}ron, Aur{\ifmmode\acute{e}\else\'{e}\fi}lien},
+	title = {{A Short Introduction to Entropy, Cross-Entropy and KL-Divergence}},
+	journal = {YouTube},
+	year = {2018},
+	month = {Feb},
+	publisher = {Youtube},
+	note = {[Online; accessed 13. Apr. 2021]},
+	url = {https://www.youtube.com/watch?v=ErfnhcEV1O8}
+}
+
+@misc{chaitin,
+	title = {{(77) Gregory Chaitin {$\vert$} Universidad de Buenos Aires - Academia.edu}},
+	year = {2021},
+	month = {Apr},
+	note = {[Online; accessed 12. Apr. 2021]},
+	url = {https://uba.academia.edu/GregoryChaitin}
+}
+
 @book{Bissuel2019Apr,
 	author = {Bissuel, Alo{\ifmmode\ddot{\imath}\else\"{\i}\fi}s},
 	title = {{Hyper-parameter optimization algorithms: a short review}},
